# BLVK

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: installpackage.cmake
helpers/: glfwenum.txt  glfwfunc.txt  glfwstruct.txt  reflect_gen.py  tmpf.txt
src/: CMakeLists.txt  main.cpp
src/inc/: bl_glfw.hpp  bl_output.hpp  bl_reflect.hpp  bl_vkcontext.hpp  bl_vkrenderloop.hpp  bl_vkresult.hpp  bl_vktypes.hpp  bl_window.hpp
src/inc/core/: bl_constant.hpp  bl_init.hpp  bl_renderloop.hpp  bl_shader.hpp  bl_util.hpp
src/lib/: bl_output.cpp  bl_vkcontext.cpp  bl_vkrenderloop.cpp  bl_vkresult.cpp  bl_window.cpp
src/lib/core/: bl_init.cpp  bl_renderloop.cpp
subprojects/: CMakeLists.txt
subprojects/utfcpp/: CMakeLists.txt  readme.md
subprojects/utfcpp/utf8/: checked.h  core.h  cpp11.h  cpp17.h  cpp20.h  unchecked.h
subprojects/vma/: CMakeLists.txt  vk_mem_alloc.h
